# CVBeeInteractions

./: 00_clean_bee_interactions.py  00_get_inaturalist_images.py  01_crop_images.py  01_crop_images.sh  02_convert_data.sh  02_convert_data_to_tensor.py  02_convert_data_to_wds.py  02_crop_images.py  03_convert_imgs_to_wds.py  03_train.sh  03_vit_test.py  04_cluster.sh  04_fit.py  04_get_embedding.sh  04_get_embeddings.py  04_simclr.sh  05_get_embeddings.sh  05_get_species_embedding.py  06_interaction_training.py  06_train.sh  07_bag_attention.py  07_train_attention.sh  README.md  SIMCLR.py  bee_embed.sh  compile_test.sh  compile_tests.py  crop_tests.py  get_inaturalist_images.py  lightning.py  lightning_test.sh  main.py  mem_test.py  mem_test.sh  model.py  plant_embed.sh  pyproject.toml  requirements.txt  resnet_simpler.py  resnet_simpler.sh  (+3 more)
src/: checkpoints.py  dataset.py  model.py  simclr_transforms.py  supervised_contrastive.py
