[project]
name = "coloradobees"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "datetime>=5.5",
    "ipyplot>=1.1.2",
    "lightning>=2.5.2",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pygbif>=0.6.5",
    "pyinaturalist>=0.20.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchmetrics>=1.8.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.54.1",
    "webdataset>=1.0.2",
    "xgboost>=3.0.4",
]
